syntax = "proto3";

option csharp_namespace = "GrpcUpdateSeniorityService";

package UpdateSeniority;

service UpdateSeniorityGreeter {
	rpc UpdateSeniority (UpdateSeniorityRequest) returns (UpdateSeniorityReply);
}

message UpdateSeniorityRequest {
	string Id = 1;
	int32 Seniority = 2;
}

message UpdateSeniorityReply {
	bool successful = 1;
	string message = 2;
}
